поменял название переменной, сократил до .toList()