@@ -6,14 +6,11 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import ru.emitrohin.paymentserver.dto.mapper.ProfileMapper;
-import ru.emitrohin.paymentserver.dto.TransactionResponse;
 import ru.emitrohin.paymentserver.dto.mapper.TransactionMapper;
 import ru.emitrohin.paymentserver.service.FirstRunService;
 import ru.emitrohin.paymentserver.service.ProfileService;
 import ru.emitrohin.paymentserver.service.TransactionService;
 
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 @RequiredArgsConstructor
@@ -36,16 +33,16 @@ public class ProfileController {
         }
 
         // Получение списка транзакций и маппинг с использованием TransactionMapper
-        var transactionDTOs = transactionService.getAllTransactions(telegramId)
+        var transactions = transactionService.getAllTransactions(telegramId)
                 .stream()
                 .map(transactionMapper::toTransactionResponse)
-                .collect(Collectors.toList());
+                .toList();
 
         // Передача данных в модель
         var firstRunEntry = firstRunService.findFirstRun(telegramId);
         model.addAttribute("firstRun", firstRunEntry.isEmpty());
         model.addAttribute("profileForm", profileMapper.createUpdateResponse(profileForm.get()));
-        model.addAttribute("transactions", transactionDTOs);
+        model.addAttribute("transactions", transactions);
 
         return "profile";
     }
